--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project2</title>
+    <title>eLib</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag "stylesheet", media: 'all', 'data-turbolinks-track' => 'reload'%>
+    <%= javascript_include_tag "js", 'data-turbolinks-track' => 'reload' %>
+    <%= yield :login %>
   </head>
 
   <body>
