--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
 
   <body>
+  	<div id = "navbar" class= "clear">
+    
+      <div id = "title"><%= link_to_unless_current("eLib", root_path } %></div>
+        
+  	</div>
+
     <%= yield %>
   </body>
 </html>
