--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -1,3 +1,7 @@
+  <% content_for :login do %>
+    <%= stylesheet_link_tag "login" %>
+  <% end %>
+
 <h2> Profile </h2>
 
 <h3> Name: <%= @user.name if @user.name %></h3>
