--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
 <div style="padding: 20px; margin: 12% auto; width: 60%; background-color: rgba(249,249,249, 0.9); position: relative; height: 50%; color: #000; display: flex; align-items: center; justify-content: center;">
 
 	<div id = "menubutton">
-		<%= link_to "USERS", controller: "users", actions: "login" %>
+		<%= link_to "USERS", user_session_path %>
 	</div>
 
 	<div id = "menubutton">
-		<%= link_to "ADMINS", controller: "admins", actions: "login" %>
+		<%= link_to "ADMINS", admin_session_path %>
 	</div>
 
 </div>
