--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
   	<div id = "navbar" class= "clear">
     
-      <div id = "title"><%= link_to_unless_current("eLib", root_path } %></div>
+      <div id = "title"><%= link_to_unless_current("eLib", root_path) %></div>
         
   	</div>
 
