--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -1,10 +1,5 @@
-  <% content_for :login do %>
-    <%= stylesheet_link_tag "login" %>
-  <% end %>
-
 <h2> Profile </h2>
 
-<h3> Name: <%= @user.name if @user.name %></h3>
 <h3> Email: <%= @user.email if @user.email %></h3>
 
 <h4> Books currently borrowed: </h4>
@@ -12,10 +7,21 @@
 	<tbody>
 		<%= @user.books.each do |book| %>
 		<tr>
-			<td><%= book.name %></td>
+			<td><%= book.title %></td>
 			<td><%= book.author %></td>
-			<td><%= button_to "Return", return_path(id: book.id), :class => "button small", :method => :patch %></td>
+			<td><%= button_to "Return", return_path(id: book), :class => "button small", :method => :patch %></td>
 		</tr>
 		<% end %>
 	</tbody>
+
 </table>
+<%= button_to "Issue Books", books_show_path, :class => "button medium", :method => :get %>
+<% if user_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path)  %>  
+  </li>
+<% end %>
