--- a/app/views/books/deleteshow.html.erb
+++ b/app/views/books/deleteshow.html.erb
@@ -1,3 +1,5 @@
+<div id = "container">
+
 <div id="show" style="overflow:scroll; height:800px;">
 <p><% @books.each do |book| %><p>
 	<%= book.title %>
@@ -10,3 +12,5 @@
 <% end %>
 </p>
 </p></div>
+
+</div>
