--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
-<h2>Sign up</h2>
+<div id = 'logintitle'><h2>Sign up</h2></div>
 
+<div id = 'container' style = "margin:4% auto !important;">
+
+  <div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -25,4 +28,10 @@
   </div>
 <% end %>
 
+<div id = "sharedlinks">
 <%= render "devise/shared/links" %>
+</div>
+
+</div>
+
+</div>
