--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div id = 'logintitle'><h2>Sign up</h2></div>
+<div id = 'logintitle'><h2><%= resource_name %> registration</h2></div>
 
-<div id = 'container' style = "margin:4% auto !important;">
+<div id = 'container'>
 
   <div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
