Users & admins main pages CSS initial

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -96,9 +96,9 @@ a {
 	background-color: #964446;
 }
 
-/* LOGIN & REGISTRATION PAGES */
+/* PAGE TITLES */
 
-#logintitle {
+#pagetitle {
 	color: #FFF;
 	position: relative;
 	top: 90px;
