--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div id = 'logintitle'><h2><%= resource_name %> registration</h2></div>
+<div id = 'pagetitle'><h2><%= resource_name %> registration</h2></div>
 
 <div id = 'container'>
 
