--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -1,4 +1,6 @@
-<h2> Profile </h2>
+<h2 id="pagetitle"> Profile </h2>
+
+<div id = 'container'>
 
 <h3> Email: <%= @user.email if @user.email %></h3>
 
@@ -16,6 +18,8 @@
 
 </table>
 <%= button_to "Issue Books", books_show_path, :class => "button medium", :method => :get %>
+
+<div id = 'sharedlinks'>
 <% if user_signed_in? %>
   <li>
   <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
@@ -25,3 +29,5 @@
   <%= link_to('Login', new_user_session_path)  %>  
   </li>
 <% end %>
+</div>
+</div>
