Books CSS initial

--- a/app/views/books/deleteshow.html.erb
+++ b/app/views/books/deleteshow.html.erb
@@ -1,4 +1,4 @@
-<div id = "container">
+<div id = "maincontainer">
 
 <div id="show" style="overflow:scroll; height:800px;">
 <p><% @books.each do |book| %><p>
