--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,12 +1,4 @@
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div id = "maincontainer">
 <%= simple_form_for @book do |f| %>
   <%= f.input :title %>
   <%= f.input :author %>
@@ -15,3 +7,4 @@
   <%= f.input :no_copies %>
   <%= f.button :submit %>
 <% end %>
+</div>
