--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<div id="show" style="overflow:scroll; height:800px;">
+<div id = "maincontainer">
 <p><% @books.each do |book| %><p>
 	<%= book.title %>
 	<%= book.author %>
@@ -8,5 +8,4 @@
 	<%= book.avail_for_issue %>
 	<%= button_to "Issue Book", issue_path(id: book), :class => "button medium", :method => :patch %>
 <% end %>
-</p>
-</p></div>
+</div>
