Books CSS final + README

--- a/app/views/books/deleteshow.html.erb
+++ b/app/views/books/deleteshow.html.erb
@@ -1,4 +1,4 @@
-<div id = "maincontainer" style = "height: auto;">
+<div id = "maincontainer2">
 <p><% @books.each do |book| %><p>
 	<%= book.title %>
 	<%= book.author %>
