--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -140,3 +140,20 @@ button {
 	align-items: center;
 	justify-content: center;
 }
+
+#maincontainer2 {
+	padding: 20px;
+	font-family: 'Barlow Semi Condensed';
+	background-color: rgba(249,249,249, 0.8);
+	position: absolute;
+	height: auto;
+	width: 800px;
+	color: #000;
+	border-radius: 2px;
+	top: 50%;
+	left: 50%;
+	margin-top: -200px;
+	margin-left: -400px;
+	align-items: center;
+	justify-content: center;
+}
