--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<div id = "maincontainer" style = "height: auto;">
+<div id = "maincontainer2">
 <%= simple_form_for @book do |f| %>
   <%= f.input :title %>
   <%= f.input :author %>
