--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,11 @@
   	<div id = "navbar" class= "clear">
     
       <div id = "title"><%= link_to_unless_current("eLib", root_path) %></div>
-        
-  	</div>
 
-    <%= yield %>
+  	</div>
+    <div id = "maincontainer2">
+        <%= yield %>
+    </div>
+    
   </body>
 </html>
