--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,26 @@
-<p><% @books.each do |book| %><p>
-	<%= book.title %>
-	<%= book.author %>
-	<%= book.genre %>
-	<%= book.no_copies %>
-	<%= book.avail_for_issue %>
-	<%= button_to "Issue Book", issue_path(id: book), :class => "button medium", :method => :patch %>
-<% end %>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>書名</th>
+			<th>剩餘幾本</th>
+			<th></th>
+		<tr>
+	</thead>
+	<tbody>
+		<% @books.each do |book| %>
+			<tr>
+				<td><%= book.title %></td>
+				<td><%= book.no_copies %></td>
+				<td><%= button_to "借書", issue_path(id: book), :class => "button medium btn-success", :method => :patch %></td>
+			</tr>
+		<% end %>
+	
+	</tbody>
+</table>
+
+
+
+
+<div class="pull-right">
+    <%= paginate @books  %>
+</div>
