--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -16,7 +16,7 @@
 	</tbody>
 
 </table>
-<%= button_to "借書", books_show_path, :class => "button btn-success", :method => :get %>
+<%= button_to "借書", books_path, :class => "button btn-success", :method => :get %>
 
 
 </div>
