--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,20 +7,19 @@
 		<tr>
 	</thead>
 	<tbody>
-		<% @books.each do |book| %>
-			<tr>
-				<td><%= book.title %></td>
-				<td><%= book.no_copies %></td>
-				<td><%= button_to "借書", issue_path(id: book), :class => "button medium btn-success", :method => :patch %></td>
-			</tr>
-		<% end %>
-	
+		<tr>
+			<td><%= @book.title %></td>
+			<td><%= @book.no_copies %></td>
+			<td>
+				<%if current_user.books.ids.include?(@book.id)%>
+					<div class="btn btn-primary">已借</div>
+				<%else%>
+					<%= link_to books_path(id: @book), :class => "btn btn-success", :method => :patch do%>
+						借書
+					<%end%>
+				<%end%>
+			</td>
+		</tr>
 	</tbody>
 </table>
 
-
-
-
-<div class="pull-right">
-    <%= paginate @books  %>
-</div>
