--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,38 @@
   </head>
 
   <body>
-  	<div id = "navbar" class= "clear">
-    
-      <div id = "title"><%= link_to_unless_current("eLib", root_path) %></div>
 
-      <div id = 'sharedlinks' class='pull-right'>
-        <% if user_signed_in? %>
-          <li>
-          <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-          </li>
-        <% else %>
-          <li>
-          <%= link_to('Login', new_user_session_path)  %>  
-          </li>
-        <% end %>
-      </div>
+    <nav class="navbar navbar-inverse clear" id = "navbar" >
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <%= link_to_unless_current("個人借書", root_path) %>
+                </li>
+                <li>
+                    <%= link_to books_path, :method => :get do %>
+                        <p>館藏</p>
+                    <%end%>
+                </li>
+                <%if current_user.is_admin?%>
+                    <li><a href="/admin">後台管理</a></li>
+                <%end%>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <div id = 'sharedlinks' class='pull-right'>
+                    <% if user_signed_in? %>
+                        <li>
+                            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+                        </li>
+                    <% else %>
+                        <li>
+                            <%= link_to('Login', new_user_session_path)  %>  
+                        </li>
+                    <% end %>
+                </div>
+            </ul>
+        </div>
+    </nav>
 
-  	</div>
     <div id = "maincontainer2">
         <%= yield %>
     </div>
