--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,7 @@
 			<th>書名</th>
 			<th>剩餘幾本</th>
 			<th></th>
+			<th>目前正在閱讀：</th>
 		<tr>
 	</thead>
 	<tbody>
@@ -18,6 +19,13 @@
 						借書
 					<%end%>
 				<%end%>
+			</td>
+			<td>
+				<ul>
+					<% @book.users.each do |u|%>
+						<li> <%= u.email %></li>
+					<%end%>
+				</ul>
 			</td>
 		</tr>
 	</tbody>
