--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row container">
     <div class="col-md-12">
         <div class="row">新書</div>
         <ul>
@@ -17,16 +17,20 @@
 
 
 
-<%= search_form_for @q do |f| %>
-    <%= f.label :title_cont %>
-    <%= f.search_field :title_cont %>
-    <%= f.submit %>
-<% end %>
+
 
 <table id="example" class="table table-striped">
     <thead>
         <tr>
             <th>書名</th>	
+            <th>
+                <%= search_form_for @q do |f| %>
+                    <%= f.label :title_cont %>
+                    <%= f.search_field :title_cont %>
+                    <%= f.submit %>
+                <% end %>
+                
+            </th>
         </tr>
     </thead>
     <tbody>
