--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -1,15 +1,18 @@
 <h2 id="pagetitle"> Profile </h2>
 
 <div id = 'maincontainer'>
-<h3> Email: <%= @user.email if @user.email %></h3>
 
-<h4> 已經借了：</h4>
+<h3> Email: <%= @user.email if @user.email %>  已經借了：</h3>
+
 <table class= "table">
 	<tbody>
 		<% @user.books.each do |book| %>
 		<tr>
-			<td><%= book.title %></td>
-			<td><%= book.author %></td>
+			<td>
+				<%= link_to book_path(book) do%>
+					<%= book.title %>
+				<%end%>
+			</td>
 			<td><%= button_to "還書", return_path(id: book), :class => "button btn-warning", :method => :patch %></td>
 		</tr>
 		<% end %>
