--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -2,7 +2,7 @@
 
 <div id = 'maincontainer'>
 
-<h3> Email: <%= @user.email if @user.email %>  已經借了：</h3>
+<h3> <%= @user.email if @user.email %>  已經借了：</h3>
 
 <table class= "table">
 	<tbody>
