--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -14,11 +14,10 @@
 				<%end%>
 			</td>
 			<td>
-				<%= UserBookShip.find_by(:user_id=> @user.id, :book_id=>book.id).created_at.localtime%>
+				<%= UserBookShip.find_by(:user_id=> @user.id, :book_id=>book.id).created_at.in_time_zone("Taipei").strftime("%Y/%m/%d %H:%M")%>
 			</td>
 			<td>
 				<%= button_to "還書", return_path(id: book), :class => "button btn-warning", :method => :patch %>
-				
 			</td>
 		</tr>
 		<% end %>
