--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row container">
-    <div class="col-md-12">
+    <div class="col-md-4">
         <div class="row">新書</div>
         <ul>
             <% Book.all.order(created_at: :DESC).limit(10).each do |book|%>
@@ -7,38 +7,48 @@
                     <%= link_to book_path(book.id) do%>
                         <%=book.title%>
                     <%end%>
-                        
                 </li>
             <%end%>
         </ul>
     </div>
+    <div class="col-md-4">
+        <div class="row">熱門</div>
+        <ul>
+            <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
+                <li>
+                    <%= link_to book_path(book.id) do%>
+                        <%=book.title%>
+                    <%end%>
+                </li>
+            <%end%>
+        </ul>
+    </div>
+
 </div>
-
-
-
-
 
 
 <table id="example" class="table table-striped">
     <thead>
         <tr>
-            <th>書名</th>	
+            <th>書名</th>
+            <th>借閱次數</th>
             <th>
                 <%= search_form_for @q do |f| %>
                     <%= f.label :title_cont %>
                     <%= f.search_field :title_cont %>
                     <%= f.submit %>
                 <% end %>
-                
             </th>
         </tr>
     </thead>
     <tbody>
-        
         <% @books.each do |book| %>
             <tr>
                 <td>
                     <%= book.title %>
+                </td>
+                <td>
+                    <%= book.issue_count%>
                 </td>
                 <td>
                     <%= link_to book_path(book.id),  :class=>"btn btn-default" do %>
