--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -49,14 +49,14 @@
 		<div class="row">
 			<div class="col-sm-1">
 				<div class="thumbnail">
-					<img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+					<img class="img-responsive user-photo" src="<%=comment.user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
 				</div><!-- /thumbnail -->
 			</div><!-- /col-sm-1 -->
 
 			<div class="col-sm-5">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<strong><%=comment.user.email%></strong> <span class="text-muted"><%=comment.created_at%></span> <span class="pull-right">score: <%=comment.score%> </span>
+						<strong><%=comment.user.name or comment.user.email%></strong> <span class="text-muted"><%=comment.created_at%></span> <span class="pull-right">score: <%=comment.score%> </span>
 					</div>
 					<div class="panel-body">
 						<%=comment.content%>
@@ -71,7 +71,7 @@
 		<div class="row">
 			<div class="col-sm-1">
 				<div class="thumbnail">
-					<img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+					<img class="img-responsive user-photo" src="<%=current_user.img_url or 'https://ssl.gstatic.com/accounts/ui/avatar_2x.png'%> ">
 				</div><!-- /thumbnail -->
 			</div><!-- /col-sm-1 -->
 
