--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,9 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to omniauth_authorize_path(resource_name, provider),:class=>"btn btn-danger", :style=>"color:white" do%>
+    	<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/google-icon.png" alt="" style="width: 50px"><%="Sign in with google"%>
+	<%end%>
+    <br />
   <% end -%>
 <% end -%>
