--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -24,5 +24,7 @@
     	<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/google-icon.png" alt="" style="width: 50px"><%="Sign in with google"%>
 	<%end%>
     <br />
+
+  <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
   <% end -%>
 <% end -%>
