--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,15 @@
                 <div id = 'sharedlinks' class='pull-right'>
                     <% if user_signed_in? %>
                         <li>
-                            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+                            <%= link_to destroy_user_session_path, method: :delete, :class=>"btn btn-default"  do %>
+                                logout
+                            <%end%>
                         </li>
                     <% else %>
                         <li>
-                            <%= link_to('Login', new_user_session_path)  %>  
+                            <%= link_to new_user_session_path, :class=>"btn btn-default" do  %>  
+                                login
+                            <%end%>
                         </li>
                     <% end %>
                 </div>
