--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,40 +1,41 @@
 <style>
 	*{font-family:"Courier New", Courier, monospace}
 
+	form p,
+	form input[type="submit"] {
+	  text-align: center;
+	  font-size: 20px;
+	}
 
-form p,
-form input[type="submit"] {
-  text-align: center;
-  font-size: 20px;
-}
+	#wrapper form input[type="submit"] {
+	  border: 1px solid #d9d9d9;
+	  background-color: #efefef;
+	}
 
-#wrapper form input[type="submit"] {
-  border: 1px solid #d9d9d9;
-  background-color: #efefef;
-}
+	input[type="radio"] {
+	  display: none;
+	}
 
-input[type="radio"] {
-  display: none;
-}
+	label {
+	  color: grey;
+	}
 
-label {
-  color: grey;
-}
+	.clasificacion {
+	  direction: rtl;
+	  unicode-bidi: bidi-override;
+	}
 
-.clasificacion {
-  direction: rtl;
-  unicode-bidi: bidi-override;
-}
+	label:hover,
+	label:hover ~ label {
+	  color: orange;
+	}
 
-label:hover,
-label:hover ~ label {
-  color: orange;
-}
-
-input[type="radio"]:checked ~ label {
-  color: orange;
-}
+	input[type="radio"]:checked ~ label {
+	  color: orange;
+	}
 </style>
+
+
 
 <table class="table table-striped">
 	<thead>
@@ -47,7 +48,21 @@ input[type="radio"]:checked ~ label {
 	</thead>
 	<tbody>
 		<tr>
-			<td><%= @book.title %></td>
+			<td>
+				<div class="pull-left">
+					<% if @book.comments.average(:score).present?%>
+						<span style="color: orange;">
+							<% @book.comments.average(:score).to_i.times do%>
+								&#9733;
+							<%end%>
+						</span>
+					<%end%>
+				</div>
+				<br>
+				<div>
+					<%= @book.title %>
+				</div>
+			</td>
 			<td><%= @book.no_copies %></td>
 			<td>
 				<%if current_user.books.ids.include?(@book.id)%>
@@ -107,7 +122,11 @@ input[type="radio"]:checked ~ label {
 					</div>
 					<div class="panel-body">
 						<%=comment.content%>
+						<%= link_to book_delete_comment_path(@book,:comment_id => comment.id), :class=>"pull-right btn btn-default btn-xs", data: {:confirm=>'Are you sure?'} do%>
+							刪除
+						<%end%>
 					</div><!-- /panel-body -->
+					
 				</div><!-- /panel panel-default -->
 			</div><!-- /col-sm-5 -->
 
