--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,8 @@
 <div class="row container">
     <div class="col-md-4">
-        <div class="row">新書</div>
+        <div class="row">
+            <h3>新書</h3>
+        </div>
         <ul>
             <% Book.all.order(created_at: :DESC).limit(10).each do |book|%>
                 <li>
@@ -12,7 +14,9 @@
         </ul>
     </div>
     <div class="col-md-4">
-        <div class="row">熱門</div>
+        <div class="row">
+            <h3>熱門</h3>
+        </div>
         <ul>
             <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
                 <li>
@@ -26,19 +30,22 @@
 
 </div>
 
+<div class="container" style="margin: 30px;">
+    <%= search_form_for @q do |f| %>
+        <%= f.label :title_cont %>
+        <%= f.search_field :title_cont %>
+        <%= f.submit %>
+    <% end %>
+</div>
 
 <table id="example" class="table table-striped">
     <thead>
         <tr>
-            <th>書名</th>
-            <th><%= sort_link(@q, :issue_count, '借閱次數') %></th>
-            <th>
-                <%= search_form_for @q do |f| %>
-                    <%= f.label :title_cont %>
-                    <%= f.search_field :title_cont %>
-                    <%= f.submit %>
-                <% end %>
+            <th style="width: 400px;">
+                書名
             </th>
+            <th style="width: 200px;"><%= sort_link(@q, :issue_count, '借閱次數') %></th>
+            <th style="width:  50px"></th>
         </tr>
     </thead>
     <tbody>
