--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,10 @@
             <% Book.all.order(created_at: :DESC).limit(10).each do |book|%>
                 <li>
                     <%= link_to book_path(book.id) do%>
-                        <%=book.title%>
+                        <%=book.title[0..15] %> 
+                        <% if book.title.length > 16%>
+                            <%= "..." %>
+                        <%end%>
                     <%end%>
                 </li>
             <%end%>
@@ -21,7 +24,11 @@
             <% Book.order(issue_count: :DESC).limit(10).each do |book|%>
                 <li>
                     <%= link_to book_path(book.id) do%>
-                        <%=book.title%>（<%= book.issue_count%>）
+                        <%=book.title[0..15] %> 
+                        <% if book.title.length > 16%>
+                            <%= "..." %>
+                        <%end%>
+                        （<%= book.issue_count%>）
                     <%end%>
                 </li>
             <%end%>
