--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -52,7 +52,7 @@
                 書名
             </th>
             <th style="width: 150px">剩餘幾本</th>
-            <th style="width: 150px;"><%= sort_link(@q, :issue_count, '借閱次數') %></th>
+            <th style="width: 150px;"><%= sort_link(@q, :issue_count, '借閱次數') %><i class="fa fa-sort"></i></th>
             <th style="width:  50px"></th>
         </tr>
     </thead>
