--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -83,7 +83,14 @@
                         show
                     <%end%>
                 </td>
-            </tr>				
+                <td>
+                    <p>
+                        <% book.tag_list.each do |tag| %>
+                            <%= link_to tag, tagged_path(tag: tag) %>
+                        <% end %>
+                    </p>
+                </td>
+            </tr>
         <% end %>
     </tbody>
 </table>
