--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -227,7 +227,8 @@
 
 	$( ".select2_row #book_tag_items" ).select2({
 	    theme: "bootstrap",
-	    tags: true
+	    tags: true,
+	    maximumInputLength: 6
 	});
 	$(".select2").css( "width","80%" );
 
